word wrap bug fix

--- a/src/index.css
+++ b/src/index.css
@@ -118,3 +118,8 @@
   border-radius: 8px;
   cursor: pointer;
 }
+
+
+.blog-content{
+  word-wrap: break-word;
+}
